<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/off"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:onClick="onClickSendOff"
        android:layout_alignParentRight="true"
        android:text="@string/Light_off" />

    <Button
        android:id="@+id/on"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        
        android:onClick="onClickSendOn"
        android:text="@string/Light_on" />
    
    <Button
        android:id="@+id/addLight"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/Add_light"
        android:onClick="addLight" />
    
    <Spinner
        android:id="@+id/Lights_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/on" />

    <EditText
        android:id="@+id/edit_ip"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:hint="@string/editIp"
        android:layout_alignParentLeft="true"
        android:layout_above="@id/addLight" />

    <Button
        android:id="@+id/setIp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/addLight"
        android:layout_toRightOf="@id/edit_ip"
        android:layout_alignParentRight="true"
        android:text="@string/set_ip"
        android:onClick="set_ip" />
    
    <Button 
        android:id="@+id/Blindopen"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/Lights_list"
        android:text="@string/Blind_open"
        android:onClick="openBlind"/>
    
    <Button 
        android:id="@+id/Blindclose"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/Lights_list"
        android:text="@string/Blind_close"
        android:onClick="closeBlind"/>
    
    <Spinner
        android:id="@+id/Blinds_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Blindopen" />
    
    <Button 
        android:id="@+id/LightsOnOff"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/Blinds_list"
        android:text="@string/LightsToggle"
        android:onClick="LightsT"/>
    
    <Button 
        android:id="@+id/BlindsOnOff"
        android:layout_width="149dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/Blinds_list"
        android:layout_alignParentRight="true"
        android:text="@string/BlindsToggle"
        android:onClick="BlindsT"/>
    
    <Button 
        android:id="@+id/manage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/BlindsOnOff"
        android:layout_alignParentRight="true"
        android:text="@string/addrem"
        android:onClick="AddRemove"/>
    
</RelativeLayout>