<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="2dp" >

    <TextView
        android:id="@+id/homeLocTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/homeLoc"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:padding="3dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
            <TextView
                android:id="@+id/latTextView"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/latTV"
                android:gravity="center_vertical" />
            <TextView
                android:id="@+id/lonTextView"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/lonTV"
                android:gravity="center_vertical" />
            
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1" >

            <EditText
                android:id="@+id/latEditText"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:ems="10"
                android:inputType="numberDecimal" />
            <EditText
                android:id="@+id/lonEditText"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:ems="10"
                android:inputType="numberDecimal" >
            </EditText>
            
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/setHomeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setHome" />
    <Button
        android:id="@+id/getLocButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/curLoc" />

</LinearLayout>